overflow fix

--- a/styles/css/history.css
+++ b/styles/css/history.css
@@ -29,7 +29,7 @@
   -ms-transition: height 0.5s ease-in-out;
   -o-transition: height 0.5s ease-in-out;
   transition: height 0.5s ease-in-out;
-  overflow: auto;
+  overflow-y: auto;
   margin-bottom: 20px;
 }
 
